--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/db": "^0.11.6",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.10.2",
+    "astro": "^4.11.0",
+    "pnpm": "^9.4.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
