--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/db": "^0.11.6",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.11.0",
-    "pnpm": "^9.4.0",
+    "@fontsource-variable/jost": "^5.0.20",
+    "astro": "^4.14.3",
+    "pnpm": "^9.7.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
